feat: add converter jpg to png

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="counter_two">Счетчик 2</string>
     <string name="counter_three">Счетчик 3</string>
     <string name="fragment_user_user_name">Имя пользователя:</string>
+    <string name="btn_convert">Загрузить</string>
+    <string name="h_convert_image">Конвертация картинки jpg в png</string>
 </resources>
