feat: add repo recyclerview in layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="btn_convert">Загрузить</string>
     <string name="h_convert_image">Конвертация картинки jpg в png</string>
     <string name="user_s_avatar">User\'s avatar</string>
+    <string name="user_repo">Репозитории</string>
 </resources>
